--- a/practice.cfg
+++ b/practice.cfg
@@ -1,19 +1,18 @@
 // Setup
 sv_cheats "1";              // Enable cheat commands
 bot_kick all;               // Kick all bots from the server
-///mp_warmup_end;              // End the match's warmup
-/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 
-// Set the server to Competitive
-///game_type "0";              // Sets the game type to Classic - https://developer.valvesoftware.com/wiki/CSGO_Game_Mode_Commands
-/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
-///game_mode "1";              // Sets the game mode to Competitive
-/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+// Let everyone hear players from both teams
+sv_alltalk "1";
 
 // Turn off team limits and team auto balance
-mp_autoteambalance "0";     // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
-///mp_limitteams "0";          // Number of extra players one team can have over another 0: Disables any limits
-/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
+mp_autoteambalance "0";                     // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
+mp_teams_unbalance_limit "0";               // 0: Disable check for unbalanced teams
+sv_vote_issue_autobalance_cooldown "32767"; // Sets delay between voting to enable team balance to the max
+mp_forceautoteam "0";                       // Disable automatically assigning players to teams
+
+sv_vote_issue_classlimits_max "255";        // Sets the max players per class to the max players in a source engine server
+sv_vote_issue_classlimits_max_mvm "255";    // Sets the max players per class to the max players in a source engine server (in MvM)
 
 // Adjust buy menu-related settings
 ///mp_items_prohibited "0";    // Turn off all item limitations
@@ -25,8 +24,6 @@ mp_autoteambalance "0";     // 0: Players won't be autobalanced to the other tea
 
 // Makes limits as high as they can go
 mp_maxrounds "2147483647";              // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
-//mp_c4timer "2147483647";                // Determines how much time is between the bomb being planted and it exploding
-/// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
 mp_timelimit "0";                       // Disables the overall match time limit
 //mp_roundtime "60";                      // Sets the default round time to last 60 minutes
 /// // TODO: Look for an equivelant TF2 command because this is not a command in TF2
@@ -113,6 +110,7 @@ mp_timelimit "0";                       // Disables the overall match time limit
 
 // Restart the match to ensure all changes have been applied
 mp_restartgame "1";                     // Restart the current MATCH, this does not restart the entire game
+mp_forcerespawnplayers;
 
 echo "";
 echo "";
