--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,74 @@ qmmconnect.dt
 
 # Microsoft Visual Studio Code
 .vscode/
+
+# TF2 Files
+360controller-linux.cfg
+360controller.cfg
+
+chapter1.cfg
+chapter2.cfg
+chapter3.cfg
+config_default.cfg
+config.cfg
+
+mapcycle_beta_asteroid.txt
+mapcycle_beta_cactus_canyon.txt
+mapcycle_beta_mannpower.txt
+mapcycle_default.txt
+mapcycle_doomsday_event_247.txt
+mapcycle_featured_maps.txt
+mapcycle_halloween_event_247.txt
+mapcycle_halloween.txt
+mapcycle_hightower_event_247.txt
+mapcycle_invasion_maps.txt
+mapcycle_ladder.txt
+mapcycle_lakeside_event_247.txt
+mapcycle_mannpower.txt
+mapcycle_quickplay_arena.txt
+mapcycle_quickplay_attackdefense.txt
+mapcycle_quickplay_cp.txt
+mapcycle_quickplay_ctf.txt
+mapcycle_quickplay_koth.txt
+mapcycle_quickplay_misc.txt
+mapcycle_quickplay_passtime.txt
+mapcycle_quickplay_payload.txt
+mapcycle_quickplay_payloadrace.txt
+motd_default.txt
+motd_entries.txt
+motd_text_default.txt
+mtp.cfg
+
+pure_server_full.txt
+pure_server_minimal.txt
+pure_server_whitelist_example.txt
+
+replay_example.cfg
+server_247_mannpower.cfg
+server_247_rounds.cfg
+server_blacklist.txt
+server_bootcamp.cfg
+server_casual_max_rounds_win_conditions_mannpower.cfg
+server_casual_max_rounds_win_conditions.cfg
+server_casual_rounds_win_conditions.cfg
+server_casual_stopwatch_win_conditions.cfg
+server_casual.cfg
+server_competitive_max_rounds_win_conditions_high_skill.cfg
+server_competitive_max_rounds_win_conditions.cfg
+server_competitive_rounds_win_conditions_high_skill.cfg
+server_competitive_rounds_win_conditions.cfg
+server_competitive_stopwatch_win_conditions_high_skill.cfg
+server_competitive_stopwatch_win_conditions.cfg
+server_competitive.cfg
+server_limited_rounds.cfg
+server_limited_time.cfg
+server_mannup.cfg
+server_matchmaking_base.cfg
+server_mvm.cfg
+sfm_defaultanimationgroups.txt
+sixense_bindings.cfg
+sourcevr_tf.cfg
+trusted_keys_base.txt
+trusted_keys_example.txt
+undo360controller.cfg
+user.scr
