--- a/practice.cfg
+++ b/practice.cfg
@@ -10,6 +10,7 @@ mp_autoteambalance "0";                     // 0: Players won't be autobalanced 
 mp_teams_unbalance_limit "0";               // 0: Disable check for unbalanced teams
 sv_vote_issue_autobalance_cooldown "32767"; // Sets delay between voting to enable team balance to the max
 mp_forceautoteam "0";                       // Disable automatically assigning players to teams
+mp_respawnwavetime "0";                     // Time between respawn waves.
 
 sv_vote_issue_classlimits_max "255";        // Sets the max players per class to the max players in a source engine server
 sv_vote_issue_classlimits_max_mvm "255";    // Sets the max players per class to the max players in a source engine server (in MvM)
@@ -122,5 +123,3 @@ echo "!                                                                      !";
 echo "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!";
 echo "";
 echo "";
-
-
