--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ server_limited_time.cfg
 server_mannup.cfg
 server_matchmaking_base.cfg
 server_mvm.cfg
+settings.scr
 sfm_defaultanimationgroups.txt
 sixense_bindings.cfg
 sourcevr_tf.cfg
