--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -671,7 +671,7 @@ bind "A"              "                                                 ; keycon
 bind "S"              "+ncmleft;                                        ; keycontainer";                        // This is the s key
 bind "D"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
 bind "F"              "+ncmright;                                       ; keycontainer";                        // This is the f key
-bind "G"              "+inspect;                                        ; keycontainer";                        // This is the g key
+bind "G"              "+taunt;                                          ; keycontainer";                        // This is the g key
 bind "H"              "+use_action_slot_item;                           ; keycontainer";                        // This is the h key
 bind "J"              "+spin;                                           ; keycontainer";                        // This is the j key
 bind "K"              "                                                 ; keycontainer";                        // This is the k key
