--- a/finsfriends.cfg
+++ b/finsfriends.cfg
@@ -9,12 +9,12 @@ tf_weapon_criticals_melee "0";            // Controls random crits for melee wea
 
 // Miscellaneous server configuration
 tf_server_identity_disable_quickplay "1"; // Disable this server from being chosen by the quickplay matchmaking.
-sv_alltalk "1";                           // Voice chats are not team specific 
+sv_alltalk "1";                           // Voice chats are not team specific (you can talk with the opposing team)
 mp_disable_respawn_times "1";             // Disable respawn waves
 mp_stalemate_enable "1";                  // Heavy boxing occurs instead of stalemates
 
 replay_enable "1";                        // Enable Replay recording on server
-maxplayers 255;
+maxplayers "255";                         // Sets the maximum number of players that can be in the server at once (including bots)
 
 sv_tags "alltalk,increased_maxplayers,nocrits,nodmgspread,noquickplay,norespawntime,replays,suddendeath";
 // sv_tags sets server tags, see https://developer.valvesoftware.com/wiki/Sv_tags
