--- a/practice.cfg
+++ b/practice.cfg
@@ -1,76 +1,77 @@
 // Setup
-sv_cheats "1"
-bot_kick
-mp_warmup_end
+sv_cheats "1";
+bot_kick;
+mp_warmup_end;
 
 // Set the server to Competitive
-game_mode "1"
-game_type "0"
+game_mode "1";
+game_type "0";
 
 // Turn off team limits and team auto balance
-mp_autoteambalance "0"      // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
-mp_limitteams "0"           // Number of extra players one team can have over another 0: Disables any limits
+mp_autoteambalance "0";         // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
+mp_limitteams "0";              // Number of extra players one team can have over another 0: Disables any limits
 
 // Adjust buy menu-related settings
-mp_items_prohibited "0"     // Turn off all item limitations
-mp_buytime "2147483647"     // Determines how long players can buy
-mp_buy_anywhere "1"         // 0: Players can buy in buy zones 1: Players can buy anywhere
+mp_items_prohibited "0";        // Turn off all item limitations
+mp_buytime "2147483647";        // Determines how long players can buy
+mp_buy_anywhere "1";            // 0: Players can buy in buy zones 1: Players can buy anywhere
 
 // Makes limits as high as they can go
-mp_maxrounds "2147483647"   // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
-mp_c4timer "2147483647"     // Determines how much time is between the bomb being planted and it exploding
-mp_timelimit "0"            // Disables the overall match time limit
-mp_roundtime "60"           // Sets the default round time to last 60 minutes
-mp_roundtime_defuse "60"    // Sets defuse gamemode rounds to last 60 minutes
-mp_roundtime_hostage "60"   // Sets hostage gamemode rounds to last 60 minutes
-mp_roundtime_deployment "60"// Sets deployment time in co-op modes to last 60 minutes
+mp_maxrounds "2147483647";      // Sets the maximum rounds to 2^31-1, the maximum 32 bit signed integer
+mp_c4timer "2147483647";        // Determines how much time is between the bomb being planted and it exploding
+mp_timelimit "0";               // Disables the overall match time limit
+mp_roundtime "60";              // Sets the default round time to last 60 minutes
+mp_roundtime_defuse "60";       // Sets defuse gamemode rounds to last 60 minutes
+mp_roundtime_hostage "60";      // Sets hostage gamemode rounds to last 60 minutes
+mp_roundtime_deployment "60";   // Sets deployment time in co-op modes to last 60 minutes
 
 // Make delays as short as possible
-mp_round_restart_delay "1"  // Determines how much time there is at the end of a round before the next one starts
-mp_halftime_duration "0"    // Determines how long the halftime screen with the scoreboard shows
-mp_freezetime "0"
-mp_halftime "0"             // Turns switching sides at the halfway point on or off
+mp_round_restart_delay "1";     // Determines how much time there is at the end of a round before the next one starts
+mp_halftime_duration "0";       // Determines how long the halftime screen with the scoreboard shows
+mp_freezetime "0";
+mp_halftime "0";                // Turns switching sides at the halfway point on or off
 
 // Make the match restart instead of swapping to a new map
-mp_match_restart_delay "3"  // Determines how long the delay should be before the match restarts
-mp_match_end_restart "1"    // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
+mp_match_restart_delay "3";     // Determines how long the delay should be before the match restarts
+mp_match_end_restart "1";       // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
 
 // Makes players respawn on death automatically (like in deathmatch)
-mp_respawn_on_death_ct "1"  // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
-mp_respawn_on_death_t "1"   // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
+mp_respawn_on_death_ct "1";     // 0: Counter Terrorists don't respawn on death 1: Terrorists respawn on death
+mp_respawn_on_death_t "1";      // 0: Terrorists don't respawn on death 1: Terrorists respawn on death
+mp_respawnwavetime "0";
 
 // Makes ammo unlimited
-sv_infinite_ammo "1"        // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
+sv_infinite_ammo "1";           // 0: Shooting/throwing grenades consumes ammo 1: Makes bullets and grenades unlimited (no reloads necessary)
 
 // Gives people as much money as possible
-mp_overtime_startmoney "65535" // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
-mp_startmoney "65535"       // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
-mp_maxmoney "65535"         // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+mp_overtime_startmoney "65535"; // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+mp_startmoney "65535";          // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
+mp_maxmoney "65535";            // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
 
 // Item/Grenade limits
-ammo_grenade_limit_breachcharge "255"
-ammo_grenade_limit_snowballs "255"
-ammo_grenade_limit_flashbang "255"
-ammo_grenade_limit_bumpmine "255"
-ammo_grenade_limit_default "255"
-ammo_grenade_limit_total "32767"
-ammo_item_limit_healthshot "255"
+ammo_grenade_limit_breachcharge "255";
+ammo_grenade_limit_snowballs "255";
+ammo_grenade_limit_flashbang "255";
+ammo_grenade_limit_bumpmine "255";
+ammo_grenade_limit_default "255";
+ammo_grenade_limit_total "32767";
+ammo_item_limit_healthshot "255";
 
 // Drop everything
-mp_drop_knife_enable "1"
-mp_drop_grenade_enable "1"
-mp_anyone_can_pickup_c4 "1"
+mp_drop_knife_enable "1";
+mp_drop_grenade_enable "1";
+mp_anyone_can_pickup_c4 "1";
 
 // Spray practice
-sv_showimpacts "1"            // 0: Don't show impact boxes 1: Show grenade and bullet impacts
-sv_showimpacts_time "10"      // Show the impact times for the set number of seconds
+sv_showimpacts "1";           // 0: Don't show impact boxes 1: Show grenade and bullet impacts
+sv_showimpacts_time "10";     // Show the impact times for the set number of seconds
 
 // Grenade practice
-sv_grenade_trajectory "1"
-sv_grenade_trajectory_time "10"
+sv_grenade_trajectory "1";
+sv_grenade_trajectory_time "10";
 
 // Enables health regeneration, this effectively turns on buddha mode without one-shot immunity
-sv_regeneration_force_on "1"  // Enable health regeneration
+sv_regeneration_force_on "1"; // Enable health regeneration
 
 // Restart the match to ensure all changes have been applied
-mp_restartgame "1"
+mp_restartgame "1";
