--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 # Isolate binary files in case the auto-detection algorithm fails and
 # marks them as text files (which could brick them).
 *.{png,jpg,jpeg,gif,webp,woff,woff2} binary
+*.{keep,yml,json,cfg,gitattributes,gitignore,md,txt} text
