--- a/config.cfg
+++ b/config.cfg
@@ -178,7 +178,7 @@ c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
 cachedvalue_count_partybrowser "1641505543"
-cachedvalue_count_teammates "1641618176"
+cachedvalue_count_teammates "1641865728"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -248,7 +248,7 @@ cl_embedded_stream_audio_volume_xmaster "1"
 cl_fixedcrosshairgap "-4"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
-cl_hide_avatar_images ""
+cl_hide_avatar_images "2"
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "-1"
@@ -312,7 +312,7 @@ cl_radialmenu_deadzone_size "0.04"
 cl_radialmenu_deadzone_size_joystick "0.17"
 cl_righthand "1"
 cl_rumblescale "1.0"
-cl_sanitize_player_names "0"
+cl_sanitize_player_names "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
@@ -461,7 +461,7 @@ option_speed_method "0"
 password ""
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_10_1_8B1DA40F "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_de_ravine,mg_de_extraction,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_2v2_10_1_8B1DA40F "mg_de_ravine,mg_de_extraction,mg_de_vertigo,mg_de_inferno,mg_de_overpass,mg_de_cbble,mg_de_train,mg_de_shortnuke,mg_de_shortdust,mg_de_lake"
 player_competitive_maplist_8_10_1_62D24D31 "mg_de_dust2,mg_de_train,mg_de_ancient,mg_de_inferno,mg_de_nuke,mg_de_vertigo,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_insertion2,mg_lobby_mapveto,mg_de_basalt,mg_cs_agency,mg_de_overpass"
 player_nevershow_communityservermessage "0"
 player_survival_list_10_1_13 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_county"
@@ -503,7 +503,7 @@ snd_menumusic_volume "0.3"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.025"
-snd_music_selection "2"
+snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.1"
 snd_mute_losefocus "1"
@@ -583,7 +583,7 @@ ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "competitive"
-ui_playsettings_mode_official_v20 "casual"
+ui_playsettings_mode_official_v20 "scrimcomp2v2"
 ui_playsettings_prime "1"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
