--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,10 +1,9 @@
 clear;
 echo "Loading";
-echo "Fin#1337's TF2 Config v0.1.0-rc12";
+echo "Fin#1337's TF2 Config v1.0.0";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "https://settings.gg/bigfinfrank";
-echo "Last edited: December 8th 2021";
+echo "Last edited: January 12th 2022";
 echo "";
 echo "";
 echo "";
@@ -889,11 +888,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's TF2 Config v0.1.0-rc12";
+echo "Fin#1337's TF2 Config v1.0.0";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "https://settings.gg/bigfinfrank";
-echo "Last edited: December 8th 2021";
+echo "Last edited: January 12th 2022";
 echo "";
 echo "";
 echo "";
