--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;
 echo "Loading";
-echo "Fin#1337's CSGO Config v4.0.2";
+echo "Fin#1337's CSGO Config v4.0.3";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: March 19th 2022";
+echo "Last edited: March 29th 2022";
 echo "";
 echo "";
 echo "";
@@ -34,7 +34,8 @@ sv_pure "1";                                                    // Forces all cl
 sv_contact "csgocfg@fin.fail";                                  // Contact email for server sysop (please change this)
 sv_steamauth_enforce "2";                                       // Requires connection to steam servers for VAC
 exec "fixed_controller.360.cfg";                                // Turns on controller support
-hostname "Fin's CSGO Config 4.0.2 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "Fin's CSGO Config 4.0.3 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+sv_steamgroup ""
 
 
 
@@ -89,11 +90,11 @@ net_graph "2";                                                  // Turn on the n
 
 echo "[2.0] Changing viewmodel";
 viewmodel_presetpos "0";                                        // Determines which preset viewmodel to use 0: None 1: Desktop 2: Couch 3: Classic
-viewmodel_offset_x "2.50";                                      // Changes camera position on the X axis
-viewmodel_offset_y "-2.0";                                      // Changes camera position on the Y axis
-viewmodel_offset_z "-2.0";                                      // Changes camera position on the Z axis
-viewmodel_recoil "0";                                           // Amount of weapon recoil/aimpunch to display on viewmodel
-viewmodel_fov "54";                                             // Determines how 'far' your gun is
+vmp_highfov
+//vmp_lowfov  - low fov version of my main viewmodel preset
+//vmp_highfov - high fov version of my main viewmodel preset
+//vmp_skins   - for looking at skins
+//vmp_doom    - 'centered' (ish) weapon, works best with pistols.
 
 
 echo "[2.1] Minimizing view bobbing";
@@ -177,8 +178,8 @@ alias "righthand" "cl_righthand 1; alias handswap lefthand";    // handed viewmo
 
 
 echo "[3.3.6] Setting up (patched?) better bomb finder alias";
-alias "+defuse" "+use_or_reload; gameinstructor_enable 1; cl_autohelp 1; cl_showhelp 1";                                  // [Patched?] Uses the game instructor to find the bomb
-alias "-defuse" "-use_or_reload; gameinstructor_enable 0; cl_autohelp 1; cl_showhelp 0";                                  // [Patched?] thru smokes with a "defuse the bomb" icon
+alias "+defuse" "+use; gameinstructor_enable 1; cl_autohelp 1; cl_showhelp 1";                                  // [Patched?] Uses the game instructor to find the bomb
+alias "-defuse" "-use; gameinstructor_enable 0; cl_autohelp 1; cl_showhelp 0";                                  // [Patched?] thru smokes with a "defuse the bomb" icon
 
 
 echo "[3.3.7] Setting up hold-for-knife alias";
@@ -234,8 +235,8 @@ alias "gaben" "exec gaben.cfg";                                 // Setup clean G
 
 
 echo "[3.3.10] Setting up volume bump while slow walking";
-alias +loudshift "volume 0.125;+speed";                          // Increase volume and slow walk while holding the [+loudshift] key
-alias -loudshift "volume 0.1;-speed";                           // Return volume to 0.1 and stop slow walking when releasing the [+loudshift] key
+alias +loudshift "volume 0.150; +speed";                          // Increase volume and slow walk while holding the [+loudshift] key
+alias -loudshift "volume 0.125; -speed";                           // Return volume to 0.1 and stop slow walking when releasing the [+loudshift] key
 
 
 echo "[3.3.11] Setting up chat aliases";                        // Reminder that chat can display 7 lines on screen while unfocused
@@ -342,6 +343,7 @@ alias "mousekeybinds" "exec lists/mousekeybinds.cfg";
 alias "joystickbinds" "exec lists/joystickbinds.cfg";
 alias "listeverybind" "60percentrow1;60percentrow2;60percentrow3;60percentrow4;60percentrow5;60percentrow6;80percentkeys;numberpadkeys;mousekeybinds;joystickbinds;";
 
+
 echo "[3.3.17] Setting up TF2 cfg parity binds";
 alias "+inspect" "+lookatweapon";
 alias "-inspect" "-lookatweapon";
@@ -363,7 +365,8 @@ alias "-inspect" "-lookatweapon";
 // Old version of RGB Hud: (above is a fix attempt)
 // alias "rgbhud" "toggle cl_hud_color 5 6 4 3 2 1 9 8 7 10";
 
-echo "[3.3.19] Setting up clan tag cycling aliases";
+
+echo "[3.3.18] Setting up clan tag cycling aliases";
 alias "clanid"   "clanid0";                                     //  These are ordered from shortest to longest tags (then reversed)
 alias "clanid0"  "cl_clanid 12455;    alias clanid clanid1";    // Clan tag: GG
 alias "clanid1"  "cl_clanid 1673752;  alias clanid clanid2";    // Clan tag: pro
@@ -388,7 +391,7 @@ alias "clanid19" "cl_clanid 17898;    alias clanid clanid20";   // Clan tag: god
 alias "clanid20" "cl_clanid 485027;   alias clanid clanid21";   // Clan tag: gay
 alias "clanid21" "cl_clanid 1673752;  alias clanid clanid22";   // Clan tag: pro
 alias "clanid22" "cl_clanid 12455;    alias clanid clanid0";    // Clan tag: GG
-
+//
 //alias "clanidA" "cl_clanid 25759;    alias clanid clanid10";  // Clan tag: BAKA
 //alias "clanidB" "cl_clanid 8918560;  alias clanid clanid13";  // Clan tag: legs♥
 //alias "clanidC" "cl_clanid 31803563; alias clanid clanid16";  // Clan tag: Femb♥ys
@@ -407,6 +410,15 @@ alias "clanid22" "cl_clanid 12455;    alias clanid clanid0";    // Clan tag: GG
 // prefired because the enemy team has someone call out that the clan tag changed.
 // Additionally, because with this config I can bind things to every key, there's
 // no way to know if I'm moving, changing guns, throwing utility, or fidgeting.
+
+
+echo "[3.3.19] Setting up custom viewmodel presets";
+alias "vmp_lowfov"  "viewmodel_offset_x  2.50; viewmodel_offset_y -2.0; viewmodel_offset_z -2.0; viewmodel_recoil 0; viewmodel_fov 54";
+alias "vmp_highfov" "viewmodel_offset_x  2.50; viewmodel_offset_y -2.0; viewmodel_offset_z -2.0; viewmodel_recoil 0; viewmodel_fov 68";
+alias "vmp_skins"   "viewmodel_offset_x  0;    viewmodel_offset_y  0;   viewmodel_offset_z  0;   viewmodel_recoil 0; viewmodel_fov 68";
+alias "vmp_doom"    "viewmodel_offset_x -2;    viewmodel_offset_y -2;   viewmodel_offset_z  1.5; viewmodel_recoil 0; viewmodel_fov 54";
+
+
 
 echo "[4.0] Changing the radar";
 cl_radar_square_with_scoreboard "1";                            // Makes the radar square while looking at the scoreboard
@@ -552,7 +564,7 @@ bind "ENTER"          "                                                 ; keycon
 bind "KP_LEFTARROW"   "                                                 ; keycontainer";                        // This is the Numpad 4 key
 bind "KP_5"           "                                                 ; keycontainer";                        // This is the Numpad 5 key
 bind "KP_RIGHTARROW"  "                                                 ; keycontainer";                        // This is the Numpad 6 key
-// ** Numpad + key is in the section above **
+// ** Numpad + key is in section [7.2] **
 
 
 echo "[7.4] Setting up binds for keyboard row 5";
@@ -582,14 +594,14 @@ bind "ALT"            "                                                 ; keycon
 bind "SPACE"          "+cjump;                                          ; keycontainer";                        // This is the spacebar key
 bind "RALT"           "                                                 ; keycontainer";                        // This is the right alt key
 bind "RWIN"           "                                                 ; keycontainer";                        // This is the windows (os) key to the right of the spacebar
-// ** No key for Menu key **                                            ** No key for Menu key **               // The right click key isn't bindable
+// ** No key for Menu key **                                            ** No key for Menu key **               // The menu key isn't bindable
 bind "RCTRL"          "toggle_duck;                                     ; keycontainer";                        // This is the right control key
 bind "LEFTARROW"      "+left;                                           ; keycontainer";                        // This is the left arrow key
 bind "DOWNARROW"      "                                                 ; keycontainer";                        // This is the down arrow key
 bind "RIGHTARROW"     "+right;                                          ; keycontainer";                        // This is the right arrow key
 bind "KP_INS"         "clearchat;                                       ; keycontainer";                        // This is the Numpad 0 key
 bind "KP_DEL"         "ahegao;                                          ; keycontainer";                        // This is the Numpad period/full stop key
-// ** Numpad enter key is in the section above **
+// ** Numpad enter key is in section [7.4] **
 
 
 echo "[7.6] Setting up binds for the mouse";
@@ -648,6 +660,7 @@ cl_join_advertise "2";                                          // Advertise joi
 cl_autowepswitch "0";                                           // Automatically switch to picked up weapons (if more powerful)
 snd_mute_losefocus "0";                                         // Mute sounds when losing focus
 bugreporter_uploadasync "1";                                    // Upload attachments asynchronously
+
 
 echo "[9.1] Tweaks from TF2 mastercomfig";
 r_dynamic "1";
@@ -756,10 +769,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's CSGO Config v4.0.2";
+echo "Fin#1337's CSGO Config v4.0.3";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: March 19th 2022";
+echo "Last edited: March 29th 2022";
 echo "";
 echo "";
 echo "";
