--- a/practice.cfg
+++ b/practice.cfg
@@ -1,15 +1,17 @@
 // Setup
-sv_cheats "1";
-bot_kick;
-mp_warmup_end;
+sv_cheats "1";                  // Allows use of various "cheat" commands on the server
+bot_kick;                   // Kicks all bots from the server
+bot_stop "1";                   // Turns off all bot AI
+mp_warmup_end;                  // Ends warmup immediately
 
 // Set the server to Competitive
-game_mode "1";
-game_type "0";
+game_mode "1";                  // Sets game mode to Competitive
+game_type "0";                  // Sets game type to Classic
 
 // Turn off team limits and team auto balance
 mp_autoteambalance "0";         // 0: Players won't be autobalanced to the other team if their team has significantly more players 1: Players will be autobalanced if teams are "unfair"
 mp_limitteams "0";              // Number of extra players one team can have over another 0: Disables any limits
+mp_autokick "0";                // Don't automatically kick players (for griefing/AFKing)
 
 // Adjust buy menu-related settings
 mp_items_prohibited "0";        // Turn off all item limitations
@@ -31,6 +33,9 @@ mp_halftime_duration "0";       // Determines how long the halftime screen with 
 mp_freezetime "0";
 mp_halftime "0";                // Turns switching sides at the halfway point on or off
 
+mp_drop_knife_enable "1";               // Lets you drop knives to other players
+mp_anyone_can_pickup_c4 "1";            // Lets you pick up bomb while on CT side
+
 // Make the match restart instead of swapping to a new map
 mp_match_restart_delay "3";     // Determines how long the delay should be before the match restarts
 mp_match_end_restart "1";       // 0: A new map is loaded once the match is complete 1: Restart the current map instead of loading a new map once the match is complete
@@ -49,17 +54,12 @@ mp_startmoney "65535";          // 2^16-1 (maximum signed 16 bit integer) is the
 mp_maxmoney "65535";            // 2^16-1 (maximum signed 16 bit integer) is the realistic max, otherwise it overflows (65537 means $1)
 
 // Item/Grenade limits
-ammo_grenade_limit_breachcharge "255";
-ammo_grenade_limit_snowballs "255";
 ammo_grenade_limit_flashbang "255";
-ammo_grenade_limit_bumpmine "255";
 ammo_grenade_limit_default "255";
 ammo_grenade_limit_total "32767";
-ammo_item_limit_healthshot "255";
 
 // Drop everything
 mp_drop_knife_enable "1";
-mp_drop_grenade_enable "1";
 mp_anyone_can_pickup_c4 "1";
 
 // Spray practice
@@ -67,11 +67,16 @@ sv_showimpacts "1";           // 0: Don't show impact boxes 1: Show grenade and 
 sv_showimpacts_time "10";     // Show the impact times for the set number of seconds
 
 // Grenade practice
-sv_grenade_trajectory "1";
-sv_grenade_trajectory_time "10";
+sv_grenade_trajectory "1";              // Shows the trajectory of thrown grenades with a line that draws where the grenade went
+sv_grenade_trajectory_time "15";        // Sets the time trajectories
+sv_grenade_trajectory_dash "1";         // Makes the tracjetory line dashed
+cl_grenadepreview "1";
+mp_ct_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_incgrenade";
+mp_t_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_molotov";
 
 // Enables health regeneration, this effectively turns on buddha mode without one-shot immunity
 sv_regeneration_force_on "1"; // Enable health regeneration
 
 // Restart the match to ensure all changes have been applied
 mp_restartgame "1";
+mp_forcerespawnplayers;
